# smalltest

./: Cargo.toml  clean_history.sh  semilinear_history.sh
.github/workflows/: rust.yml
smalltest/: Cargo.toml
smalltest/src/: arbitrary.rs  derive.rs  fair_flatten.rs  generator.rs  lib.rs
smalltest_derive/: Cargo.toml
smalltest_derive/src/: lib.rs
smalltest_derive/tests/: mod.rs
