[package]
name = "smalltest_derive"
version = "0.1.0"
authors = ["Manuel Bärenz <m.baerenz@sonnen.de>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "derive"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
smalltest = { path = "../smalltest" }
